Mon Sep 13 12:58:56 MEST 1999  Sven Neumann <sven@gimp.org>

	* app/brush_select.c: corrected scrolling in the Brushes Dialog. 
	Fixes bug #2146.

	* plug-ins/common/curve_bend.c: applied a path from Wolfgang Hofer that 	fixes wrong parameters in PDB calls.

Mon Sep 13 01:50:29 BST 1999 Nick Lamb <njl195@zepler.org>

        * plug-ins/common/png.c: Update info structure after applying
        transformations. No longer apply sBIT. Report errors nicely.

Sun Sep 12 19:37:12 CEST 1999  Marc Lehmann <pcg@goof.com>

        * configure.in: Changes for perl i18n, some file moves, new po
        subdir.

Sat Sep 11 16:44:15 PDT 1999 Manish Singh <yosh@gimp.org>

	* app/fileops.c
	* plug-ins/common/url.c: another XachPatch (TM) to fix revert and
	urls

Sat Sep 11 22:45:12 BST 1999 Andy Thomas <alt@gimp.org>

	* app/nav_window.c
	* app/floating_sel.c

	Hopefully fix for nav_popup when using tablets.
	Also applied the patch supplied by Garry R. Osgood. Thanks.

Sat Sep 11 21:54:10 CEST 1999  vidar@prosalg.no  (Vidar Madsen)

	* plug-ins/common/spheredesigner.c: Added load/save +
	better alpha support + minor dialog layout changes

Sat Sep 11 12:20:26 PDT 1999 Manish Singh <yosh@gimp.org>

	* Makefile.am: add cursors/badmsk and pixmaps/navbutton.xpm

	* app/Makefile.am: add apptypes.h, gimpbrushpipeP.h, and
	colormap_dialog.i.c

	* libgimp/parasiteio.c: #include <stdlib.h>

	* plug-ins/imagemap/Makefile.am: add *.h

1999-09-11  Kelly Lynn Martin  <kelly@poverty.bloomington.in.us>

	* app/menus.c (menus_last_opened_cmd_callback): Applied patch
	provided by Zach Beane to close bug #2145.

Sat Sep 11 17:46:37 BST 1999 Andy Thomas <alt@gimp.org>

	* app/palette.c

	When resizing the dialog it now fills with colours (as expected).

Sat Sep 11 17:02:06 CEST 1999  Olof S Kylander <olof@frozenriver.com>

	* plug-ins/pygimp/gimpenums.py: Fix of enum error
	  XX_IMAGE_FILL in two locations and didn't include
	  all fill "modes".
